--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <!-- Шапка сайта -->
-    <header class="page-header">
+    <!-- <header class="page-header">
       <div class="container">
         <nav class="nav">
           <a href="index.html" class="logo link page-header__logo"
@@ -54,7 +54,7 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <main>
       <!-- Портфолио -->
       <section class="section">
