hw-8-almost-over

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <!-- Шапка сайта -->
-    <!-- <header class="page-header">
+    <header class="page-header">
       <div class="container">
         <nav class="nav">
           <a href="./" class="logo link page-header__logo"
@@ -35,6 +35,71 @@
               <a href="" class="link site-nav__link">Контакты</a>
             </li>
           </ul>
+          <div class="mobile-menu" data-menu>
+            <ul class="mobile-site-nav list">
+              <li class="mobile-site-nav__item">
+                <a href="" class="link site-nav__link">Студия</a>
+              </li>
+              <li class="mobile-site-nav__item">
+                <a href="./portfolio.html" class="link site-nav__link"
+                  >Портфолио</a
+                >
+              </li>
+              <li class="mobile-site-nav__item">
+                <a href="" class="link site-nav__link">Контакты</a>
+              </li>
+            </ul>
+            <ul class="mobile-contact list">
+              <li class="mobile-contact__item mobile-item-phone">
+                <a href="tel:+380961111111" class="contact__link link">
+                  +38 096 111 11 11</a
+                >
+              </li>
+              <li class="mobile-contact__item mobile-item-email">
+                <a href="mailto:info@devstudio.com" class="contact__link link"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+            <ul class="mobile-social__list list">
+              <li class="mobile-social__item">
+                <a
+                  class="mobile-social__link link"
+                  href="https://www.instagram.com/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Instagram</a
+                >
+              </li>
+              <li class="mobile-social__item">
+                <a
+                  class="mobile-social__link link"
+                  href="https://www.https://twitter.com/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Twitter</a
+                >
+              </li>
+              <li class="mobile-social__item">
+                <a
+                  class="mobile-social__link link"
+                  href="https://www.facebook.com/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Facebook</a
+                >
+              </li>
+              <li class="mobile-social__item">
+                <a
+                  class="mobile-social__link link"
+                  href="https://www.https://www.linkedin.com/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >LinkedIn</a
+                >
+              </li>
+            </ul>
+          </div>
         </nav>
         <ul class="contact list">
           <li class="contact__item">
@@ -53,11 +118,28 @@
             >
           </li>
         </ul>
+        <button class="mobile-menu__btn is-open" data-menu-button>
+          <svg
+            class="mobile-menu__icon"
+            width="40"
+            height="40"
+            aria-label="Переключатель мобильного меню"
+          >
+            <use
+              class="mobile-menu__icon-menu"
+              href="./images/icons.svg#icon-menu"
+            ></use>
+            <use
+              class="mobile-menu__icon-close"
+              href="./images/icons.svg#icon-close"
+            ></use>
+          </svg>
+        </button>
       </div>
-    </header> -->
+    </header>
     <main>
       <!-- Герой -->
-      <!-- <section class="hero hero--centre">
+      <section class="hero hero--centre">
         <div class="container">
           <h1 class="hero__title">
             Эффективные решения <br />
@@ -71,7 +153,7 @@
             Заказать услугу
           </button>
         </div>
-      </section> -->
+      </section>
       <!-- Преимущества -->
       <section class="section section--without-indent">
         <div class="container">
@@ -580,7 +662,7 @@
       </div>
     </footer>
     <!-- Модальное окно -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <div class="box-close">
           <button data-modal-close type="button" class="close">
@@ -644,6 +726,7 @@
         </div>
       </div>
     </div>
-    <script src="./js/modal.js"></script> -->
+    <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
