--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
           <div class="mobile-menu" data-menu>
             <ul class="mobile-site-nav list">
               <li class="mobile-site-nav__item">
-                <a href="" class="link site-nav__link">Студия</a>
+                <a href="./index.html" class="link site-nav__link">Студия</a>
               </li>
               <li class="mobile-site-nav__item">
                 <a href="./portfolio.html" class="link site-nav__link"
