--- a/index.html
+++ b/index.html
@@ -35,70 +35,89 @@
               <a href="" class="link site-nav__link">Контакты</a>
             </li>
           </ul>
-          <div class="mobile-menu" data-menu>
-            <ul class="mobile-site-nav list">
-              <li class="mobile-site-nav__item">
-                <a href="" class="link site-nav__link">Студия</a>
-              </li>
-              <li class="mobile-site-nav__item">
-                <a href="./portfolio.html" class="link site-nav__link"
-                  >Портфолио</a
-                >
-              </li>
-              <li class="mobile-site-nav__item">
-                <a href="" class="link site-nav__link">Контакты</a>
-              </li>
-            </ul>
-            <ul class="mobile-contact list">
-              <li class="mobile-contact__item mobile-item-phone">
-                <a href="tel:+380961111111" class="contact__link link">
-                  +38 096 111 11 11</a
-                >
-              </li>
-              <li class="mobile-contact__item mobile-item-email">
-                <a href="mailto:info@devstudio.com" class="contact__link link"
-                  >info@devstudio.com</a
-                >
-              </li>
-            </ul>
-            <ul class="mobile-social__list list">
-              <li class="mobile-social__item">
-                <a
-                  class="mobile-social__link link"
-                  href="https://www.instagram.com/"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  >Instagram</a
-                >
-              </li>
-              <li class="mobile-social__item">
-                <a
-                  class="mobile-social__link link"
-                  href="https://www.https://twitter.com/"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  >Twitter</a
-                >
-              </li>
-              <li class="mobile-social__item">
-                <a
-                  class="mobile-social__link link"
-                  href="https://www.facebook.com/"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  >Facebook</a
-                >
-              </li>
-              <li class="mobile-social__item">
-                <a
-                  class="mobile-social__link link"
-                  href="https://www.https://www.linkedin.com/"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  >LinkedIn</a
-                >
-              </li>
-            </ul>
+          <div>
+            <button class="mobile-menu__btn is-open" data-menu-button>
+              <svg
+                class="mobile-menu__icon"
+                width="40"
+                height="40"
+                aria-label="Переключатель мобильного меню"
+              >
+                <use
+                  class="mobile-menu__icon-menu"
+                  href="./images/icons.svg#icon-menu"
+                ></use>
+                <use
+                  class="mobile-menu__icon-close"
+                  href="./images/icons.svg#icon-close"
+                ></use>
+              </svg>
+            </button>
+            <div class="mobile-menu" data-menu>
+              <ul class="mobile-site-nav list">
+                <li class="mobile-site-nav__item">
+                  <a href="" class="link site-nav__link">Студия</a>
+                </li>
+                <li class="mobile-site-nav__item">
+                  <a href="./portfolio.html" class="link site-nav__link"
+                    >Портфолио</a
+                  >
+                </li>
+                <li class="mobile-site-nav__item">
+                  <a href="" class="link site-nav__link">Контакты</a>
+                </li>
+              </ul>
+              <ul class="mobile-contact list">
+                <li class="mobile-contact__item mobile-item-phone">
+                  <a href="tel:+380961111111" class="contact__link link">
+                    +38 096 111 11 11</a
+                  >
+                </li>
+                <li class="mobile-contact__item mobile-item-email">
+                  <a href="mailto:info@devstudio.com" class="contact__link link"
+                    >info@devstudio.com</a
+                  >
+                </li>
+              </ul>
+              <ul class="mobile-social__list list">
+                <li class="mobile-social__item">
+                  <a
+                    class="mobile-social__link link"
+                    href="https://www.instagram.com/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Instagram</a
+                  >
+                </li>
+                <li class="mobile-social__item">
+                  <a
+                    class="mobile-social__link link"
+                    href="https://www.https://twitter.com/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Twitter</a
+                  >
+                </li>
+                <li class="mobile-social__item">
+                  <a
+                    class="mobile-social__link link"
+                    href="https://www.facebook.com/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Facebook</a
+                  >
+                </li>
+                <li class="mobile-social__item">
+                  <a
+                    class="mobile-social__link link"
+                    href="https://www.https://www.linkedin.com/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >LinkedIn</a
+                  >
+                </li>
+              </ul>
+            </div>
           </div>
         </nav>
         <ul class="contact list">
@@ -118,7 +137,7 @@
             >
           </li>
         </ul>
-        <button class="mobile-menu__btn is-open" data-menu-button>
+        <!-- <button class="mobile-menu__btn is-open" data-menu-button>
           <svg
             class="mobile-menu__icon"
             width="40"
@@ -134,7 +153,7 @@
               href="./images/icons.svg#icon-close"
             ></use>
           </svg>
-        </button>
+        </button> -->
       </div>
     </header>
     <main>
@@ -211,8 +230,8 @@
         </div>
       </section>
       <!-- Примеры работ -->
-      <section class="section">
-        <div class="container container--hidden">
+      <section class="section container--hidden">
+        <div class="container">
           <h2 class="section__title">Чем мы занимаемся</h2>
           <ul class="list card-set list-example">
             <li class="list-example__item">
