--- a/portfolio.html
+++ b/portfolio.html
@@ -35,18 +35,54 @@
               <a href="" class="link site-nav__link">Контакты</a>
             </li>
           </ul>
+        </nav>
+        <ul class="contact list">
+          <li class="contact__item">
+            <a href="mailto:info@devstudio.com" class="contact__link link"
+              ><svg class="contact__icon" width="16" height="12">
+                <use href="./images/icons.svg#icon-envelope"></use></svg
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="contact__item">
+            <a href="tel:+380961111111" class="contact__link link"
+              ><svg class="contact__icon" width="10px" height="16px">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
+          </li>
+        </ul>
+        <div class="box-mobile-menu">
+          <button class="mobile-menu__btn is-open" data-menu-button>
+            <svg
+              class="mobile-menu__icon"
+              width="40"
+              height="40"
+              aria-label="Переключатель мобильного меню"
+            >
+              <use
+                class="mobile-menu__icon-menu"
+                href="./images/icons.svg#icon-menu"
+              ></use>
+              <use
+                class="mobile-menu__icon-close"
+                href="./images/icons.svg#icon-close"
+              ></use>
+            </svg>
+          </button>
           <div class="mobile-menu" data-menu>
             <ul class="mobile-site-nav list">
               <li class="mobile-site-nav__item">
-                <a href="./index.html" class="link site-nav__link">Студия</a>
+                <a href="./index.html" class="link mobile-menu__link">Студия</a>
               </li>
               <li class="mobile-site-nav__item">
-                <a href="./portfolio.html" class="link site-nav__link"
+                <a href="./portfolio.html" class="link mobile-menu__link"
                   >Портфолио</a
                 >
               </li>
               <li class="mobile-site-nav__item">
-                <a href="" class="link site-nav__link">Контакты</a>
+                <a href="" class="link mobile-menu__link">Контакты</a>
               </li>
             </ul>
             <ul class="mobile-contact list">
@@ -100,41 +136,7 @@
               </li>
             </ul>
           </div>
-        </nav>
-        <ul class="contact list">
-          <li class="contact__item">
-            <a href="mailto:info@devstudio.com" class="contact__link link"
-              ><svg class="contact__icon" width="16" height="12">
-                <use href="./images/icons.svg#icon-envelope"></use></svg
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contact__item">
-            <a href="tel:+380961111111" class="contact__link link"
-              ><svg class="contact__icon" width="10px" height="16px">
-                <use href="./images/icons.svg#icon-smartphone"></use>
-              </svg>
-              +38 096 111 11 11
-            </a>
-          </li>
-        </ul>
-        <button class="mobile-menu__btn is-open" data-menu-button>
-          <svg
-            class="mobile-menu__icon"
-            width="40"
-            height="40"
-            aria-label="Переключатель мобильного меню"
-          >
-            <use
-              class="mobile-menu__icon-menu"
-              href="./images/icons.svg#icon-menu"
-            ></use>
-            <use
-              class="mobile-menu__icon-close"
-              href="./images/icons.svg#icon-close"
-            ></use>
-          </svg>
-        </button>
+        </div>
       </div>
     </header>
     <main>
